# CrapoLibrary

./: .gitignore  CMakeLists.txt  Crapo.sln  index.html  params.json  readme.md
System/: CMakeLists.txt  System.Net.EndPoint.cpp  System.Net.EndPoint.h  System.Net.IPAddress.cpp  System.Net.IPAddress.h  System.Net.IPEndPoint.cpp  System.Net.IPEndPoint.h  System.Net.SocketAddress.cpp  System.Net.SocketAddress.h  System.Net.Sockets.AddressFamily.h  System.Net.Sockets.ProtocolType.h  System.Net.Sockets.Socket.cpp  System.Net.Sockets.Socket.h  System.Net.Sockets.SocketType.h  System.Net.Sockets.WinSock2.cpp  System.Net.Sockets.WinSock2.h  System.Net.Sockets.h  System.Text.RegualarExpressions.ICompiler.h  System.Text.RegularExpressions.BaseMachine.cpp  System.Text.RegularExpressions.BaseMachine.h  System.Text.RegularExpressions.Cache.cpp  System.Text.RegularExpressions.Cache.h  System.Text.RegularExpressions.Capture.cpp  System.Text.RegularExpressions.Capture.h  System.Text.RegularExpressions.CaptureCollection.cpp  System.Text.RegularExpressions.CaptureCollection.h  System.Text.RegularExpressions.Category.cpp  System.Text.RegularExpressions.Category.h  System.Text.RegularExpressions.Compiler.cpp  System.Text.RegularExpressions.Compiler.h  System.Text.RegularExpressions.FactoryCache.cpp  System.Text.RegularExpressions.FactoryCache.h  System.Text.RegularExpressions.Group.cpp  System.Text.RegularExpressions.Group.h  System.Text.RegularExpressions.GroupCollection.cpp  System.Text.RegularExpressions.GroupCollection.h  System.Text.RegularExpressions.ICompiler.h  System.Text.RegularExpressions.IMachineFactory.h  System.Text.RegularExpressions.Interval.cpp  System.Text.RegularExpressions.Interval.h  (+44 more)
corlib/: Application.cpp  Application.h  AutoPtr.h  CMakeLists.txt  CharConversions.h  Crapo.Security.BitConverterLE.cpp  Crapo.Security.BitConverterLE.h  CultureInfoEntry.cpp  CultureInfoEntry.h  Encodings.cpp  Encodings.h  Global.Memory.h  Global.RefCountBase.cpp  (+252 more)
(+110 files in other folders)
